--- a/README
+++ b/README
@@ -4,6 +4,9 @@
 
 'clone & modify'
 
+# bitcoin cash
+https://en.wikipedia.org/wiki/Bitcoin_Cash
+
 # bitcoincashorg
 https://github.com/bitcoincashorg
 
