--- a/README
+++ b/README
@@ -11,6 +11,9 @@ https://en.wikipedia.org/wiki/Bitcoin_Cash
 # bitcoincashorg
 https://github.com/bitcoincashorg
 
+# bitcoin sv
+https://github.com/bitcoin-sv
+
 # litecoin
 https://en.wikipedia.org/wiki/Litecoin
 
