--- a/README
+++ b/README
@@ -14,6 +14,9 @@ https://github.com/bitcoincashorg
 # bitcoin sv
 https://github.com/bitcoin-sv
 
+# bitcoin abc
+https://github.com/Bitcoin-ABC
+
 # litecoin
 https://en.wikipedia.org/wiki/Litecoin
 
